--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,12 +1,58 @@
 ---
 fail_fast: true
 
-# See https://prek.j178.dev for more information
+# See https://pre-commit.com for more information
+# See https://pre-commit.com/hooks.html for more hooks
+
+ci:
+  # We use system Python, with required dependencies specified in pyproject.toml.
+  # We therefore cannot use those dependencies in pre-commit CI.
+  skip:
+    - actionlint
+    - sphinx-lint
+    - check-manifest
+    - deptry
+    - doc8
+    - docformatter
+    - docs
+    - interrogate
+    - interrogate-docs
+    - linkcheck
+    - mypy
+    - mypy-docs
+    - pylint
+    - pyproject-fmt-fix
+    - pyright
+    - pyright-docs
+    - pyright-verifytypes
+    - ty
+    - ty-docs
+    - pyroma
+    - ruff-check-fix
+    - ruff-check-fix-docs
+    - ruff-format-fix
+    - ruff-format-fix-docs
+    - shellcheck
+    - shellcheck-docs
+    - shfmt
+    - shfmt-docs
+    - spelling
+    - vulture
+    - vulture-docs
+    - yamlfix
+    - zizmor
+    - pyrefly
+    - pyrefly-docs
 
 default_install_hook_types: [pre-commit, pre-push]
 
 repos:
-  - repo: builtin
+  - repo: meta
+    hooks:
+      - id: check-useless-excludes
+        stages: [pre-commit]
+  - repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v6.0.0
     hooks:
       - id: check-added-large-files
         stages: [pre-commit]
@@ -76,8 +122,7 @@ repos:
 
       - id: shellcheck-docs
         name: shellcheck-docs
-        entry:
-          uv run --extra=dev doccmd --no-write-to-file --example-workers 0 --language=shell
+        entry: uv run --extra=dev doccmd --no-write-to-file --example-workers 0 --language=shell
           --language=console --command="shellcheck --shell=bash"
         language: python
         types_or: [markdown, rst]
@@ -94,8 +139,7 @@ repos:
 
       - id: shfmt-docs
         name: shfmt-docs
-        entry:
-          uv run --extra=dev doccmd --language=shell --language=console --skip-marker=shfmt
+        entry: uv run --extra=dev doccmd --language=shell --language=console --skip-marker=shfmt
           --no-pad-file --command="shfmt --write --space-redirects --indent=4"
         language: python
         types_or: [markdown, rst]
@@ -114,8 +158,7 @@ repos:
       - id: mypy-docs
         name: mypy-docs
         stages: [pre-push]
-        entry:
-          uv run --extra=dev doccmd --no-write-to-file --example-workers 0 --language=python
+        entry: uv run --extra=dev doccmd --no-write-to-file --example-workers 0 --language=python
           --command="mypy"
         language: python
         types_or: [markdown, rst]
@@ -141,8 +184,7 @@ repos:
       - id: pyright-docs
         name: pyright-docs
         stages: [pre-push]
-        entry:
-          uv run --extra=dev doccmd --no-write-to-file --example-workers 0 --language=python
+        entry: uv run --extra=dev doccmd --no-write-to-file --example-workers 0 --language=python
           --command="pyright"
         language: python
         types_or: [markdown, rst]
@@ -159,8 +201,7 @@ repos:
 
       - id: vulture-docs
         name: vulture docs
-        entry:
-          uv run --extra=dev doccmd --no-write-to-file --example-workers 0 --language=python
+        entry: uv run --extra=dev doccmd --no-write-to-file --example-workers 0 --language=python
           --command="vulture"
         language: python
         types_or: [markdown, rst]
@@ -194,8 +235,7 @@ repos:
 
       - id: pylint-docs
         name: pylint-docs
-        entry:
-          uv run --extra=dev doccmd --no-write-to-file --example-workers 0 --language=python
+        entry: uv run --extra=dev doccmd --no-write-to-file --example-workers 0 --language=python
           --command="pylint"
         language: python
         stages: [manual]
@@ -228,8 +268,7 @@ repos:
 
       - id: ruff-format-fix-docs
         name: Ruff format docs
-        entry:
-          uv run --extra=dev doccmd --language=python --no-pad-file --command="ruff
+        entry: uv run --extra=dev doccmd --language=python --no-pad-file --command="ruff
           format"
         language: python
         types_or: [markdown, rst]
@@ -254,8 +293,7 @@ repos:
 
       - id: interrogate-docs
         name: interrogate docs
-        entry:
-          uv run --extra=dev doccmd --no-write-to-file --example-workers 0 --language=python
+        entry: uv run --extra=dev doccmd --no-write-to-file --example-workers 0 --language=python
           --command="interrogate"
         language: python
         types_or: [markdown, rst]
@@ -273,8 +311,7 @@ repos:
 
       - id: linkcheck
         name: linkcheck
-        entry:
-          uv run --extra=dev sphinx-build -M linkcheck docs/source docs/build
+        entry: uv run --extra=dev sphinx-build -M linkcheck docs/source docs/build
           -W
         language: python
         types_or: [rst]
@@ -284,8 +321,7 @@ repos:
 
       - id: spelling
         name: spelling
-        entry:
-          uv run --extra=dev sphinx-build -M spelling docs/source docs/build
+        entry: uv run --extra=dev sphinx-build -M spelling docs/source docs/build
           -W
         language: python
         types_or: [rst]
@@ -322,8 +358,7 @@ repos:
       - id: ty-docs
         name: ty-docs
         stages: [pre-push]
-        entry:
-          uv run --extra=dev doccmd --no-write-to-file --example-workers 0 --language=python
+        entry: uv run --extra=dev doccmd --no-write-to-file --example-workers 0 --language=python
           --command="ty check"
         language: python
         types_or: [markdown, rst]
@@ -366,8 +401,7 @@ repos:
       - id: pyrefly-docs
         name: pyrefly-docs
         stages: [pre-push]
-        entry:
-          uv run --extra=dev doccmd --no-write-to-file --example-workers 0 --language=python
+        entry: uv run --extra=dev doccmd --no-write-to-file --example-workers 0 --language=python
           --command="pyrefly check"
         language: python
         types_or: [markdown, rst]
