--- a/pyproject.toml
+++ b/pyproject.toml
@@ -346,6 +346,8 @@ typeCheckingMode = "strict"
 [tool.pydocstringformatter]
 write = true
 split-summary-body = false
+max-line-length = 79
+linewrap-full-docstring = true
 
 [tool.interrogate]
 fail-under = 100
