--- a/pyproject.toml
+++ b/pyproject.toml
@@ -120,7 +120,9 @@ lint.ignore = [
     # Ruff warns that this conflicts with the formatter.
     "COM812",
     # Allow our chosen docstring line-style - pydocstringformatter handles formatting
-    # but doesn't enforce D205 (blank line after summary) or D212 (summary on first line).
+    # but may conflict with D200 at the line-length boundary, and doesn't enforce
+    # D205 (blank line after summary) or D212 (summary on first line).
+    "D200",
     "D205",
     "D212",
     # Ruff warns that this conflicts with the formatter.
